// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Intro] screen rendering test should render [Dark] theme 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#323739",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
            "overflow": "hidden",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "width": "100%",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 28,
                "lineHeight": 27,
              },
            ]
          }
        >
          Text Memorizer v1.0
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "bottom": 40,
              "flexDirection": "column",
              "width": "85%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "marginTop": 8,
            }
          }
        />
        <TouchableOpacity
          activeOpacity={0.5}
          testID="btn-navigate"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#069ccd",
                  "borderColor": "#069ccd",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "height": 52,
                  "justifyContent": "center",
                  "width": 320,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Navigate to TextList
            </Text>
          </View>
        </TouchableOpacity>
        <View
          style={
            Object {
              "marginTop": 8,
            }
          }
        />
        <TouchableOpacity
          activeOpacity={0.5}
          testID="btn-theme"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#069ccd",
                  "borderColor": "#069ccd",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "height": 52,
                  "justifyContent": "center",
                  "width": 320,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Change theme
            </Text>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render outer component and snapshot matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 28,
            "lineHeight": 27,
          },
        ]
      }
    >
      Text Memorizer v1.0
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "width": "85%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-navigate"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#069ccd",
              "borderColor": "#069ccd",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 52,
              "justifyContent": "center",
              "width": 320,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
              },
            ]
          }
        >
          Navigate to TextList
        </Text>
      </View>
    </TouchableOpacity>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-theme"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#069ccd",
              "borderColor": "#069ccd",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 52,
              "justifyContent": "center",
              "width": 320,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
              },
            ]
          }
        >
          Change theme
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
